# uthana-python-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.py
src/uthana/: __init__.py  client.py  exceptions.py  graphql.py  models.ini  models.py  models.toml  modules.py  types.py  utils.py
src/uthana/modules/: __init__.py  _base.py  characters.py  jobs.py  motions.py  org.py  ttm.py  vtm.py
tests/: __init__.py  conftest.py  test_client.py  test_modules.py  test_unit.py
tests/fixtures/: icegoblin.glb
