[project]
name = "uthana"
version = "0.3.0"
description = "A Python client for Uthana: generate lifelike human motion from text or 2D video, create and auto-rig characters, and manage your motions."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "tomli>=2.0.0; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uthana = ["models.toml", "py.typed"]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "smoke: subset of full tests",
    "timeout: fail test if it exceeds the given number of seconds",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.12.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "tomli>=2.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "scripts", "tests"]
exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/uthana/client.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src", "scripts", "tests"]
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = false
pretty = true

[[tool.mypy.overrides]]
module = "tests.test_modules"
disable_error_code = ["method-assign"]
